[package]
name = "engine-build"
version = "0.1.0"
authors = ["Ashlotl <thesupremeliverwurst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = { version = "0.14.0" }
ron = { version = "0.6.4" }
