[package]
name = "voxel-physics"
version = "0.1.0"
authors = ["Ashlotl <thesupremeliverwurst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[build-dependencies]
engine-build = { path = "../../engine-build" }

[dependencies]
engine-macros = { path = "../../engine-macros" }
engine-use = { path = "../../engine-use" }
parking_lot = { version = "0.11.1" }
ron = { version = "0.6.4" }
serde = { version = "1.0.77", features = ["derive"] }